fix: :bug: Adjust padding and gap

--- a/assets/css/analytics.css
+++ b/assets/css/analytics.css
@@ -1,6 +1,6 @@
-/* #analytics {
-  gap: 3rem;
-} */
+#analytics {
+  padding-top: 1.5rem;
+}
 
 .analytics__list {
   padding: 0 2rem;
